2004-05-11  Andi Kleen  <ak@suse.de>

	* libpp/callgraph_container.cpp:
	* libpp/profile_container.cpp:
	* libutil++/op_bfd.h:
	* libutil++/op_bfd.cpp: use unsigned long in various
	  places - u32 was breaking 64-bit usage

2004-05-11  John Levon  <levon@movementarian.org>

	* configure.in: bump to 0.8.1cvs

2004-05-07  John Levon  <levon@movementarian.org>

	* configure.in: bump to 0.8

2004-05-07  John Levon  <levon@movementarian.org>

	* libpp/filename_spec.h:
	* libpp/filename_spec.cpp:
	* libpp/profile_spec.cpp: "dependant" not "dependent"

2004-04-19  Will Cohen  <wcohen@redhat.com>

	* events/i386/p4/unit_masks:
	* events/i386/p4-ht/unit_masks: Correct machine_clear unit mask.

2004-04-04  Will Cohen  <wcohen@redhat.com>

	* m4/builtinexpect.m4:
	* m4/compileroption.m4:
	* m4/configmodule.m4:
	* m4/copyifchange.m4:
	* m4/docbook.m4:
	* m4/extradirs.m4:
	* m4/findkernel.m4:
	* m4/kerneloption.m4:
	* m4/kernelversion.m4:
	* m4/mallocattribute.m4:
	* m4/poptconst.m4:
	* m4/precompiledheader.m4:
	* m4/qt.m4:
	* m4/resultyn.m4:
	* m4/sstream.m4:
	* m4/typedef.m4: Add quotes as required for automake 1.8. 

2004-04-04  John Levon  <levon@movementarian.org>

	* doc/oprofile.xml: improvements to the call-graph
	* documentation.

2004-03-28  Philippe Elie  <phil.el@wanadoo.fr>

	* libutil++/op_bfd.cpp: remove spurious cerr <<; fix a potential memory
	  leak

2004-03-28  John Levon  <levon@movementarian.org>

	* libutil++/op_bfd.cpp: fix a BFD leak on format failure. Fix a
	  small race when the binary changes, and we error fatally
	  instead of recovering.

2004-03-22  Philippe Elie  <phil.el@wanadoo.fr>

	* module/x86/hammer_op_syscalls.c: use the first map with VM_EXECUTABLE
	  bit to do the exec notification, this fix a 32 bits application
	  profiling regression. We dunno exactly what is this second mmap ...
	  but we must ignore one of these. Fix #921243

2004-03-22  Philippe Elie  <phil.el@wanadoo.fr>

	* module/ia64/op_pmu.c: the way to set pfm_syst_wide and